<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegistrationFragment">

    <!-- TODO: Update blank fragment layout -->

    <CheckBox
        android:id="@+id/checkBoxUtente2"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:buttonTint="@android:color/background_light"

        android:fontFamily="@font/roboto_slab1"
        android:text="@string/utente"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxTrainer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuovaPassword" />

    <CheckBox
        android:id="@+id/checkBoxTrainer2"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:background="@color/colorPrimary"
        android:buttonTint="@android:color/background_light"
        android:fontFamily="@font/roboto_slab1"

        android:text="@string/trainer"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxUtente2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxUtente2" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_slab1"
        android:hint="@string/nome_login"
        android:inputType="text"
        android:lines="1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuovoUser" />

    <EditText
        android:id="@+id/editTextNuovaPassword"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_slab1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextNuovoUser"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_slab1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAvvisoSigin" />

    <TextView
        android:id="@+id/textViewAvvisoSigin"
        android:layout_width="327dp"
        android:layout_height="136dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_slab1"
        android:text="@string/sigin"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistrati"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_slab1"
        android:text="@string/iscriviti"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxUtente2" />
</android.support.constraint.ConstraintLayout>